--- a/.env
+++ b/.env
@@ -11,8 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
+
 # DB Name
-DB_DATABASE=lnt_backend
+DB_DATABASE=backendfp
 
 DB_USERNAME=root
 DB_PASSWORD=
